WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297253
AX: WebAccessibilityObjectWrapperBase::_identifier isn't a very useful field and causes every wrapper to be 8 bytes larger than necessary
https://bugs.webkit.org/show_bug.cgi?id=297253
Summary
AX: WebAccessibilityObjectWrapperBase::_identifier isn't a very useful field ...
Tyler Wilcock
Reported
2025-08-11 17:21:34 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-11 17:21:41 PDT
<
rdar://problem/158085042
>
Tyler Wilcock
Comment 2
2025-08-11 17:25:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49252
EWS
Comment 3
2025-08-12 08:36:37 PDT
Committed
298566@main
(4f518cd6ec32): <
https://commits.webkit.org/298566@main
> Reviewed commits have been landed. Closing PR #49252 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug