AX: WebAccessibilityObjectWrapperBase::_identifier isn't a very useful field and causes every wrapper to be 8 bytes larger than necessary https://bugs.webkit.org/show_bug.cgi?id=297253 rdar://158085042

Reviewed by Joshua Hoffman.

Remove this unnecessary field. The limited utility it had can be expressed in terms of the other member variables.

This reduces the size of every iOS and macOS wrapper from 48 bytes to 40 bytes.

* Source/WebCore/accessibility/isolatedtree/mac/AXIsolatedObjectMac.mm:
(WebCore::AXIsolatedObject::attachPlatformWrapper):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase attachAXObject:]):
(-[WebAccessibilityObjectWrapperBase attachIsolatedObject:]):
(-[WebAccessibilityObjectWrapperBase detach]):

Canonical link: https://commits.webkit.org/298566@main